review edit now redirects back to game detail page with updated review summary visible to user. fixed vaporworks overflow-x

--- a/react-app/src/components/Reviews/reviewstyles.css
+++ b/react-app/src/components/Reviews/reviewstyles.css
@@ -1,7 +1,7 @@
 .review-form-container {
   background-image: linear-gradient(to bottom right,#2d3d4b, #566573 );
   color: #aeb8c0;
-  max-width: 580px;
+  max-width: 940px;
   /* min-width: 580px; */
   position: relative;
   overflow: visible;
@@ -38,7 +38,7 @@
   border: 1px solid #233c51;
   border-radius: 3px;
   height: 132px;
-  /* width: 764px; */
+  width: 764px;
   max-width: 800px;
   background-color: #222b35;
   color: #d6d7d8;
